Vulnerability fix and code quality improvements (#441)
* Vulnerability fix

* Format changes

* Removed comments

* Better comment

* Formatting